--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     font-size: 2.5em;
 
 }
+.img {
+    padding-right: 15px;   
+
+}
 .nav {
     display: flex;
     justify-content: space-between;
@@ -55,8 +59,17 @@ a:hover {
     padding: 5px;
     border-radius: 5px;
 }
+.menu{
+    display: none;
+    cursor: pointer;
+}
 /*media query*/
 @media (max-width:375px) {
+    body{
+        max-width: 100%;
+        margin: 0 auto;
+        height: 100%;
+    }
     .profile {
         display: block;
     }
@@ -66,5 +79,8 @@ a:hover {
     }
     .main{
         margin-inline: 10px;
+    }
+    .nav {
+        display: none;
     }
 }
